fix: broken layout on mobile

--- a/example/pages/index.css
+++ b/example/pages/index.css
@@ -1,5 +1,6 @@
 .readme .markdown-body {
 
+    width: 100%;
     max-width: 736px;
     padding: 0 36px;
     line-height: 1.5;
